--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 }
 
 dependencies {
+    def lottieVersion = "3.4.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -71,4 +72,6 @@ dependencies {
 
     implementation 'androidx.fragment:fragment:1.4.1'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
